--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     //compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
+    compile group: 'com.google.api-client', name: 'google-api-client-gson', version: '1.29.0'
 
     /*implementation 'com.google.firebase:firebase-admin:6.8.0'
     implementation 'com.google.firebase:firebase-database:16.1.0'
